--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -14,7 +14,7 @@
                         <!-- Form -->
                     <form [formGroup]="forgetPasswordForm" (ngSubmit)="resetPassword()">
                             <!-- Email -->
-                        <div id="mainPart">
+                        <div id="mainPart" *ngIf="showMainForm">
                             <div class="input-group mb-3">
                                 <span class="input-group-text bg-primary"><i
                                         class="bi bi-envelope text-white"></i></span>
@@ -49,7 +49,7 @@
 
                           
 
-                        <div id="hiddenPart" style="display: none;">
+                        <div id="hiddenPart" *ngIf="showPassForm">
                             <div class="input-group mb-3">
                                 <span class="input-group-text bg-primary"><i
                                         class="bi bi-key-fill text-white"></i></span>
